# ongoing-process-state

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml  release.yaml
inputs/: sepsis_cases.bpmn  sepsis_cases.pnml  sepsis_cases_ongoing_states.csv  sepsis_cases_reachability_graph.tgf
inputs/synthetic/: synthetic_and_k10.pnml  synthetic_and_k3.bpmn  synthetic_and_k3.pnml  synthetic_and_k5.bpmn  synthetic_and_k5.pnml  synthetic_and_k5_loop.bpmn  synthetic_and_k5_loop.pnml  synthetic_and_k7.bpmn  synthetic_and_kinf.bpmn  synthetic_and_kinf.pnml  synthetic_nondeterministic.bpmn  synthetic_nondeterministic.pnml  synthetic_xor.bpmn  synthetic_xor.pnml  synthetic_xor_loop.bpmn  synthetic_xor_loop.pnml
src/process_running_state/: __init__.py  bpmn_model.py  markovian_marking.py  n_gram_index.py  petri_net.py  reachability_graph.py  utils.py
tests/: icpm24_add_noise.py  icpm24_compute_states.py  icpm24_discover_models.py  icpm24_eq1.py  icpm24_exact_state_accuracy.py  icpm24_experimentation.py  icpm24_next_activity_accuracy.py  icpm24_prefix_alignment.py  icpm24_real_life_logs_preproc.py  icpm24_split_logs.py  ieeetsc_add_noise.py  ieeetsc_compute_states.py  ieeetsc_compute_states_token_replay.py  ieeetsc_exact_state_accuracy.py  ieeetsc_next_activity_accuracy.py  ieeetsc_prefix_alignment.py  ieeetsc_token_replay.py  test_bpmn_model.py  test_bpmn_model_fixtures.py  test_markovian_marking.py  test_n_gram_index.py  test_petri_net.py  test_petri_net_fixtures.py  test_reachability_graph.py  test_reachability_graph_fixtures.py  test_utils.py  vldb25_add_noise.py  vldb25_compute_states.py  vldb25_compute_states_token_replay.py  vldb25_discover_models.py  vldb25_exact_state_accuracy.py  vldb25_real_life_logs_preproc.py  vldb25_split_logs.py  vldb25_token_replay.py
(+3 files in other folders)
