[tool.poetry]
name = "process-running-state"
version = "0.4.1"
description = "Compute the running state (marking) of a trace."
authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pix-framework = "^0.13.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.test.dependencies]
pm4py = { path = "../schuster-prefix-alignments" }
# pm4py = "^2.7.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
